# IAA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
TP0/: names-files.h  tp0.c
TP0/test/: check-ab.r  check-ab2.r  gen-plots.sh  plot-ab.r  plot-c.r
TP1/: TP1.md  ej4.sh  ej5.sh  ej6.sh  ej7.sh  ej8.sh  index.html  plot-ej4.r  plot-ej5-error.r  plot-ej5-size.r  plot-ej6.r  plot-ej7.r  plot-ej8.r
TP2/: bp.c  discretiza.c  eja.net.tmpl  eja.r  eja.sh  ejb.net.tmpl  ejb.r  ejb.sh  ejc.r  ejc.sh  ejd.net.tmpl  ejd.r  ejd.sh  eje.net.tmpl  eje.sh  index.html  plot-eja.r  plot-ejb.r  plot-ejc.r  plot-ejd.r  plot-eje.r  separa_clases.c  utils.sh
TP3/: TP3.md  ej1.sh  ej2.sh  ej3.sh  histogram.cpp  histogram.h  index.html  naivebayes.cpp  naivebayes.h  naivebayes.r  plot-ej1.sh  plot-ej2.r  plot-ej3.r
TP3/out-ej1/: naivebayes.h
TP4/: index.html
TP4/out-eja/: knn.cpp  knn.h
librand/: librand-c.c  librand-cpp.cpp  librand-internal.h  librand.cpp  librand.h
